# Revision history for Perl module autobox::Transform

{{$NEXT}}

  * New @array method: ->reject, the opposite of Array->filter


1.031 2017-11-09T00:48:09Z

  * Improved POD documentation


1.030 2017-11-08T23:42:36Z

  * Document simple case for group_by $value_sub

  * New @array methods ->group, ->group_count, ->group_array


1.029 2016-10-24T22:09:19Z

  * @array->to_hash, and %hash->to_array


1.028 2016-10-23T20:18:46Z

  * Even more docs improvements for ->order, ->order_by.


1.027 2016-10-23T17:41:02Z

  * POD fixes for order, order_by
  * Other docs improvements


1.026 2016-10-23T16:58:04Z

  * New feature: sorting using @array->order and @array->order_by.


1.025 2016-10-13T12:18:59Z

  * Document %hash->filter_each to make it official.


1.024 2016-10-12T21:00:44Z

 * ->filter and ->filter_by now takes a dwim predicate
   which can be one of: subref (returns true), string (eq), regex
   (=~), hashref (key exists).

   Arrayref (in) and undef (is) will annoyingly have to wait until the
   old call style is removed in 2.000 .


1.023 2016-10-10T21:46:35Z

 * Officially rename all "grep"-related methods to "filter" something,
   to open up for a new $array->filter() method which is more capable
   than autobox::Core's $array->grep(). There are aliases for all
   existing grep-methods.

   All grep-related methods will continue to work: they are not
   deprecated and will probably never go away.

 * Simple $array->filter($subref) method.


1.022 2016-10-09T20:11:29Z

 * POD fixes and documentation improvements


1.021 2016-10-09T19:33:10Z

 * The new call style for accessors is now the preferred one, the old
   one deprecated but still supported until 2.000 .

   If you have code with the old call style, please pin your version
   to < 2.000 in your cpanfile, dist.ini or whatever you use.


1.020 2016-10-09T15:15:22Z

 * Support for new call style for accessor method calls with arguments
   e.g. ->map_by([ price_with_discount_code => $code ])

