@@ -2,7 +2,8 @@
 
 {{$NEXT}}
 
-  * New @array method: ->reject, the opposite of Array->filter
+  * New @array method: ->reject,    the opposite of Array->filter
+  * New @array method: ->reject_by, the opposite of Array->filter_by
 
 
 1.031 2017-11-09T00:48:09Z
